force-app/main/default/objects/CJFW_SurveyResult__c/CJFW_SurveyResult__c.object-meta.xml
<CustomObject>
    <description>[P2] 설문지 결과지</description>
    <label>Survey Result</label>
    <nameField>
        <displayFormat>SR{YY}{MM}{DD}{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>