force-app/main/default/objects/CJFW_SurveyResult__c/fields/DateResult__c.field-meta.xml
<CustomField>
    <fullName>DateResult__c</fullName>
    <description>설문지 질문 Date 유형 (From/To) 값</description>
    <label>Date Result</label>
    <type>Date</type>
</CustomField>