force-app/main/default/objects/CJFW_SurveyResult__c/fields/FM_Question__c.field-meta.xml
<CustomField>
    <fullName>FM_Question__c</fullName>
    <description>질문명</description>
    <formula>SurveyQuestion__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>