force-app/main/default/objects/CJFW_SurveyResult__c/fields/OpenEnded__c.field-meta.xml
<CustomField>
    <fullName>OpenEnded__c</fullName>
    <description>주관식 답변</description>
    <label>Open Ended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>