force-app/main/default/objects/CJFW_SurveyResult__c/fields/SurveyOption__c.field-meta.xml
<CustomField>
    <fullName>SurveyOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>질문 선택지</description>
    <label>Survey Option</label>
    <referenceTo>CJFW_SurveyOption__c</referenceTo>
    <relationshipLabel>Survey Result</relationshipLabel>
    <relationshipName>Survey_Result</relationshipName>
    <type>Lookup</type>
</CustomField>