force-app/main/default/objects/CJFW_SurveyResult__c/fields/SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>설문지 질문</description>
    <label>Survey Question</label>
    <referenceTo>CJFW_SurveyQuestion__c</referenceTo>
    <relationshipLabel>Survey Result</relationshipLabel>
    <relationshipName>Survey_Result</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>