force-app/main/default/objects/CJFW_SurveyResult__c/fields/SurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>SurveyResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>설문지 응답</description>
    <label>Survey Response</label>
    <referenceTo>CJFW_SurveyResponse__c</referenceTo>
    <relationshipLabel>Survey Result</relationshipLabel>
    <relationshipName>Survey_Result</relationshipName>
    <type>Lookup</type>
</CustomField>