force-app/main/default/objects/CJFW_SurveyResult__c/fields/TimeResult__c.field-meta.xml
<CustomField>
    <fullName>TimeResult__c</fullName>
    <description>선택한 시간 값</description>
    <label>Time Result</label>
    <type>Time</type>
</CustomField>